--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <input type="radio" name="q7" value="1"> Fazer as coisas de qualquer jeito.<br>
         <input type="radio" name="q7" value="2"> Desorganização e atrasos.<br>
         <input type="radio" name="q7" value="3"> Ficar sem aparelhos eletrônicos.<br>
-        <input type="radio" name="q7" value="4"> Lugares culturais com boa gastronomia.<br>
+        <input type="radio" name="q7" value="4"> Atividades monótonas.<br>
         <button onclick="showNextQuestion()">Próxima Pergunta</button>
     </div>
 
