--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Formulário para envio do resultado por e-mail -->
         <form id="resultForm" action="https://api.staticforms.xyz/submit" method="post" style="display:none;">
-            <input type="hidden" name="accessKey" value="YOUR_ACCESS_KEY_HERE"> <!-- Insira a sua chave de acesso -->
+            <input type="hidden" name="accessKey" value="8f7e4760-b8f7-4279-9fc9-7b05cbd3c830"> <!-- Insira a sua chave de acesso -->
             <input type="hidden" name="email" value="davi.liallem@fied.edu.br"> <!-- E-mail de destino -->
             <input type="hidden" name="subject" value="Resultado do Questionário Vocacional">
             <input type="hidden" id="messageResult" name="message">
